infrastructure/kustomize/bases/monitoring/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: v1.36
    pod-security.kubernetes.io/warn: privileged
    pod-security.kubernetes.io/warn-version: v1.36
  annotations:
    linkerd.io/inject: enabled
    config.linkerd.io/default-inbound-policy: deny
