infrastructure/kustomize/bases/monitoring/policies.yaml
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: allow-prometheus
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: linkerd-metrics
  requiredAuthenticationRefs:
    - kind: ServiceAccount
      name: prometheus
      namespace: monitoring
